--- a/About.css
+++ b/About.css
@@ -7,14 +7,24 @@ body {
     #ffce00 20%,
     #ffce00 100%
   );
-  height: 97.5vh;
+  height: 100vh;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0;
+}
+
+header {
+  height: 20%;
 }
 
 .Logo {
-  width: 8%;
-  height: 10%;
-  float: left;
+  width: 10%;
+  height: 20%;
+  left: 8px;
+  top: 0;
+  position: absolute;
 }
 
 .Brand-Logo {
@@ -24,13 +34,10 @@ body {
 }
 
 h1 {
-  margin: 0;
+  margin-top: 15%;
   font-size: 48px;
   font-weight: bold;
-  width: 92%;
-  padding-top: 5%;
   color: #fff;
-  text-align: center;
 }
 
 main {
