Front end elements added
About Content, Home Page and other pages Nav Bar, logo image updated with higher resolution, Signup page password requirements added, signup page phone number formatting added

--- a/SignUp.css
+++ b/SignUp.css
@@ -21,7 +21,6 @@ body {
 
 .Left img {
   width: 80%;
-  height: 60%;
   margin: auto 0;
 }
 
@@ -83,6 +82,24 @@ form div ion-icon {
   width: 50px;
   height: 50px;
 }
+
+.password-requirements {
+  list-style-type: none;
+  padding: 0;
+}
+
+.password-requirements li {
+  font-size: 12px;
+}
+
+.not-matched {
+  color: red;
+}
+
+.matched {
+  color: green;
+}
+
 
 .facebook {
   color: #2154c2;
