--- a/About.css
+++ b/About.css
@@ -1,50 +1,216 @@
+/* Add a media query for screens smaller than 600px */
+@media screen and (max-width: 600px) {
+  header {
+    flex-wrap: wrap;
+    height: auto;
+  }
+  .buttons {
+    width: 100%;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+  .logout {
+    margin-left: 0;
+  }
+  .column {
+    flex: 1;
+    padding: 0 10px;
+}
+
+.about-content {
+    flex-direction: column;
+}
+.sticky-header {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-color: #484a4e;
+  z-index: 100;
+}
+  
+}
+
+/* Add styles for smaller screens */
+
 body {
   font-family: "Roboto", sans-serif;
   background-image: linear-gradient(
     to bottom,
     #484a4e 0%,
-    #484a4e 20%,
-    #ffce00 20%,
+    #484a4e 25%,
+    #ffce00 25%,
     #ffce00 100%
   );
   height: 100vh;
   position: relative;
   display: flex;
   flex-direction: column;
-  align-items: center;
   margin: 0;
 }
 
-header {
-  height: 20%;
-}
-
-.Logo {
-  width: 10%;
-  height: 20%;
-  left: 8px;
-  top: 0;
-  position: absolute;
-}
-
-.Brand-Logo {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-}
-
-h1 {
-  margin-top: 15%;
+.title {
+  margin-top: 5px;
   font-size: 48px;
-  font-weight: bold;
+  font-weight: normal;
   color: #fff;
+  text-align: center;
+}
+
+header {
+  height: 80px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  margin-top: 4.5%;
+}
+
+.buttons {
+  display: flex;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  border-radius: 5px;
+}
+
+.buttons a {
+  display: inline-block;
+  color: white;
+  font-size: 16px;
+  padding: 1em;
+  border: none;
+  border-radius: 5px;
+  margin-right: 10px;
+  text-decoration: none;
+  width: 100px;
+  text-align: center;
+}
+
+.buttons a:hover {
+  background-color: #636d70;
+}
+
+
+.button-home,
+.button-about,
+.button-faq {
+  padding-left: 2em;
+  background-color: #155263;
+}
+
+.logout {
+  margin-left: 10px;
+}
+
+.logout a {
+  display: inline-block;
+  color: white;
+  font-size: 16px;
+  padding: 1em;
+  border: none;
+  border-radius: 5px;
+  background-color: #ff0000;
+  text-decoration: none;
+}
+
+.logout a:hover {
+  background-color: #800101;
+}
+
+nav {
+  width: 100%;
+  overflow: hidden;
+  padding: 20px;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav li {
+  float: left;
+}
+
+nav li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+nav li a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+nav li:last-child {
+  float: right;
 }
 
 main {
-  width: 80%;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  margin: 0 auto;
-  column-gap: 10%;
-  font-size: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 80px);
+  padding: 20px;
+  text-align: left;
+}
+
+.about-content {
+  display: flex;
+  justify-content: space-between;
+  max-width: 80%;
+  color: #000000;
+  font-size: 25px;
+  line-height: 1.5;
+  margin-top: -155px;
+}
+
+.column {
+  flex: 1;
+  padding: 0 10px;
+}
+
+.column:first-child {
+  padding-right: 20px;
+}
+
+.column:last-child {
+  padding-left: 20px;
+}
+.sticky-header {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-color: #484a4e;
+  z-index: 100;
+}
+
+.logo {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.page-title {
+  position: absolute;
+  top: 15px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 48px;
+  font-weight: normal;
+  color: #fff;
+  text-align: center;
+}
+
+.navigation {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 99%;
+  padding-top: 60px;
+}
+
+header {
+  width: 100%;
 }
