--- a/Home.css
+++ b/Home.css
@@ -1,186 +1,186 @@
 /* Add a media query for screens smaller than 600px */
 @media screen and (max-width: 600px) {
-    header {
-      flex-wrap: wrap;
-      height: auto;
-    }
-    .buttons {
-      width: 100%;
-      justify-content: center;
-      margin-bottom: 20px;
-    }
-    .logout {
-      margin-left: 0;
-    }
-    .search form {
-      flex-direction: column;
-      align-items: center;
-    }
-    .search input[type=text] {
-      width: 100%;
-      margin-right: 0;
-      margin-bottom: 10px;
-    }
-    .search button[type=submit] {
-      width: 100%;
-      padding: 10px;
-    }
-  }
-  
-  /* Add styles for smaller screens */
-  
-  body {
-    font-family: "Roboto", sans-serif;
-    background-image: linear-gradient(
-      to bottom,
-      #484a4e 0%,
-      #484a4e 25%,
-      #ffce00 25%,
-      #ffce00 100%
-    );
-    height: 100vh;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-  }
-
-  .title {
-    margin-top: 5px;
-    font-size: 48px;
-    font-weight: normal;
-    color: #fff;
-    text-align: center;
-  }
-  
   header {
-    height: 80px;
-    display: flex;
-    align-items: flex-end;
-    justify-content: space-between;
-    margin-top: 4.5%;
+    flex-wrap: wrap;
+    height: auto;
   }
-  
   .buttons {
-    display: flex;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    border-radius: 5px;
-  }
-  
-  .buttons a {
-    display: inline-block;
-    color: white;
-    font-size: 16px;
-    padding: 1em;
-    border: none;
-    border-radius: 5px;
-    margin-right: 10px;
-    text-decoration: none;
-    width: 100px;
-    text-align: center;
-  }
-  
-  .buttons a:hover {
-    background-color: #636d70;
-  }
-  
-  
-  .button-home,
-  .button-about,
-  .button-faq {
-    padding-left: 2em;
-    background-color: #155263;
-  }
-  
-  .logout {
-    margin-left: 10px;
-  }
-  
-  .logout a {
-    display: inline-block;
-    color: white;
-    font-size: 16px;
-    padding: 1em;
-    border: none;
-    border-radius: 5px;
-    background-color: #ff0000;
-    text-decoration: none;
-  }
-  
-  .logout a:hover {
-    background-color: #800101;
-  }
-  
-  nav {
     width: 100%;
-    overflow: hidden;
-    padding: 20px;
-  }
-  
-  nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  nav li {
-    float: left;
-  }
-  
-  nav li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  nav li a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  nav li:last-child {
-    float: right;
-  }
-  
-  main {
-    display: flex;
     justify-content: center;
-    align-items: center;
-    height: calc(100vh - 80px);
+    margin-bottom: 20px;
   }
-  
+  .logout {
+    margin-left: 0;
+  }
   .search form {
-    display: flex;
+    flex-direction: column;
     align-items: center;
-    margin-top: -15%;
   }
-  
   .search input[type=text] {
-    padding: 10px;
-    font-size: 16px;
-    border: none;
-    border-radius: 5px 0 0 5px;
-    width: 400px;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    border-radius: 5px;
-    margin-right: 10px;
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 10px;
   }
-  
   .search button[type=submit] {
-    padding: 10px 20px;
-    font-size: 16px;
-    border: none;
-    border-radius: 0 5px 5px 0;
-    background-color: #155263;
-    color: white;
-    cursor: pointer;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    border-radius: 5px;
+    width: 100%;
+    padding: 10px;
   }
-  
-  .search button[type=submit]:hover {
-    background-color: #636d70;
+  .sticky-header {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-color: #484a4e;
+    z-index: 100;
   }
-  
+}
+
+/* Add styles for smaller screens */
+body {
+  font-family: "Roboto", sans-serif;
+  background-image: linear-gradient(
+    to bottom,
+    #484a4e 0%,
+    #484a4e 25%,
+    #ffce00 25%,
+    #ffce00 100%
+  );
+  height: 100vh;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+}
+
+.sticky-header {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-color: #484a4e;
+  z-index: 100;
+}
+
+.logo {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.page-title {
+  position: absolute;
+  top: 15px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 48px;
+  font-weight: normal;
+  color: #fff;
+  text-align: center;
+}
+
+.navigation {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 99%;
+  padding-top: 60px;
+}
+
+header {
+  width: 100%;
+  height: 80px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  margin-top: 4.5%;
+}
+
+.buttons {
+display: flex;
+filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+border-radius: 5px;
+}
+
+.buttons a {
+display: inline-block;
+color: white;
+font-size: 16px;
+padding: 1em;
+border: none;
+border-radius: 5px;
+margin-right: 10px;
+text-decoration: none;
+width: 100px;
+text-align: center;
+}
+
+.buttons a:hover {
+background-color: #636d70;
+}
+
+.button-home,
+.button-about,
+.button-faq {
+padding-left: 2em;
+background-color: #155263;
+}
+
+.logout {
+margin-left: 10px;
+}
+
+.logout a {
+display: inline-block;
+color: white;
+font-size: 16px;
+padding: 1em;
+border: none;
+border-radius: 5px;
+background-color: #ff0000;
+text-decoration: none;
+}
+
+.logout a:hover {
+background-color: #800101;
+}
+
+main {
+display: flex;
+justify-content: center;
+align-items: center;
+height: calc(100vh - 80px);
+padding: 20px;
+text-align: left;
+}
+
+.search {
+max-width: 80%;
+color: #000000;
+font-size: 25px;
+line-height: 1.5;
+margin-top: -155px;
+}
+
+.search form {
+display: flex;
+justify-content: space-between;
+}
+
+.search input[type=text] {
+flex: 1;
+padding: 10px;
+font-size: 18px;
+border: 1px solid #ccc;
+margin-right: 10px;
+}
+
+.search button[type=submit] {
+padding: 10px 20px;
+font-size: 18px;
+background-color: #155263;
+color: white;
+border: none;
+cursor: pointer;
+}
+
+.search button[type=submit]:hover {
+background-color: #636d70;
+}
