Password match updated along with logo in about page

--- a/style.css
+++ b/style.css
@@ -99,8 +99,8 @@ ion-icon:hover {
 }
 
 .image-container img {
-  width: 400px;
-  height: 400px;
+  max-width: 400px;
+  margin: auto;
 }
 
 .social-login {
