--- a/Home.css
+++ b/Home.css
@@ -4,27 +4,33 @@
     flex-wrap: wrap;
     height: auto;
   }
+
   .buttons {
     width: 100%;
     justify-content: center;
     margin-bottom: 20px;
   }
+
   .logout {
     margin-left: 0;
   }
+
   .search form {
     flex-direction: column;
     align-items: center;
   }
+
   .search input[type=text] {
     width: 100%;
     margin-right: 0;
     margin-bottom: 10px;
   }
+
   .search button[type=submit] {
     width: 100%;
     padding: 10px;
   }
+
   .sticky-header {
     position: -webkit-sticky;
     position: sticky;
@@ -37,13 +43,11 @@
 /* Add styles for smaller screens */
 body {
   font-family: "Roboto", sans-serif;
-  background-image: linear-gradient(
-    to bottom,
-    #484a4e 0%,
-    #484a4e 25%,
-    #ffce00 25%,
-    #ffce00 100%
-  );
+  background-image: linear-gradient(to bottom,
+      #484a4e 0%,
+      #484a4e 25%,
+      #ffce00 25%,
+      #ffce00 100%);
   height: 100vh;
   position: relative;
   display: flex;
@@ -94,93 +98,93 @@ header {
 }
 
 .buttons {
-display: flex;
-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-border-radius: 5px;
+  display: flex;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  border-radius: 5px;
 }
 
 .buttons a {
-display: inline-block;
-color: white;
-font-size: 16px;
-padding: 1em;
-border: none;
-border-radius: 5px;
-margin-right: 10px;
-text-decoration: none;
-width: 100px;
-text-align: center;
+  display: inline-block;
+  color: white;
+  font-size: 16px;
+  padding: 1em;
+  border: none;
+  border-radius: 5px;
+  margin-right: 10px;
+  text-decoration: none;
+  width: 100px;
+  text-align: center;
 }
 
 .buttons a:hover {
-background-color: #636d70;
+  background-color: #636d70;
 }
 
 .button-home,
 .button-about,
 .button-faq {
-padding-left: 2em;
-background-color: #155263;
+  padding-left: 2em;
+  background-color: #155263;
 }
 
 .logout {
-margin-left: 10px;
+  margin-left: 10px;
 }
 
 .logout a {
-display: inline-block;
-color: white;
-font-size: 16px;
-padding: 1em;
-border: none;
-border-radius: 5px;
-background-color: #ff0000;
-text-decoration: none;
+  display: inline-block;
+  color: white;
+  font-size: 16px;
+  padding: 1em;
+  border: none;
+  border-radius: 5px;
+  background-color: #ff0000;
+  text-decoration: none;
 }
 
 .logout a:hover {
-background-color: #800101;
+  background-color: #800101;
 }
 
 main {
-display: flex;
-justify-content: center;
-align-items: center;
-height: calc(100vh - 80px);
-padding: 20px;
-text-align: left;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 80px);
+  padding: 20px;
+  text-align: left;
 }
 
 .search {
-max-width: 80%;
-color: #000000;
-font-size: 25px;
-line-height: 1.5;
-margin-top: -155px;
+  max-width: 80%;
+  color: #000000;
+  font-size: 25px;
+  line-height: 1.5;
+  margin-top: -155px;
 }
 
 .search form {
-display: flex;
-justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .search input[type=text] {
-flex: 1;
-padding: 10px;
-font-size: 18px;
-border: 1px solid #ccc;
-margin-right: 10px;
+  flex: 1;
+  padding: 10px;
+  font-size: 18px;
+  border: 1px solid #ccc;
+  margin-right: 10px;
 }
 
 .search button[type=submit] {
-padding: 10px 20px;
-font-size: 18px;
-background-color: #155263;
-color: white;
-border: none;
-cursor: pointer;
+  padding: 10px 20px;
+  font-size: 18px;
+  background-color: #155263;
+  color: white;
+  border: none;
+  cursor: pointer;
 }
 
 .search button[type=submit]:hover {
-background-color: #636d70;
+  background-color: #636d70;
 }
