--- a/Home.css
+++ b/Home.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap");
 
 * {
   box-sizing: border-box;
@@ -6,8 +6,9 @@
   padding: 0;
 }
 
-html, body {
-  font-family: 'Roboto', sans-serif;
+html,
+body {
+  font-family: "Roboto", sans-serif;
   background-color: #ffce00;
   height: 100%;
 }
@@ -18,6 +19,11 @@ header {
   align-items: center;
   padding: 1rem;
   background-color: #484a4e;
+}
+
+#photo-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .title {
@@ -56,7 +62,7 @@ main {
   min-height: calc(100% - 4rem);
 }
 
-.search input[type=text] {
+.search input[type="text"] {
   padding: 10px;
   font-size: 16px;
   border: none;
@@ -92,8 +98,8 @@ main {
     padding: 0.5em;
     font-size: 14px;
   }
-  
-  .search input[type=text] {
+
+  .search input[type="text"] {
     width: 100%;
   }
 }
