--- a/style.css
+++ b/style.css
@@ -1,141 +1,106 @@
 body {
-  font-family: "Roboto", sans-serif;
-  display: grid;
-  grid-template-columns: 40fr 60fr;
-  grid-template-rows: 1fr;
-  margin: auto;
-  background-image: linear-gradient(
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background: linear-gradient(
     to right,
-    #484a4e 0%,
-    #484a4e 40%,
-    #ffce00 40%,
-    #ffce00 100%
+    #ffce00 0%,
+    #ffce00 50%,
+    #484a4e 50%,
+    #484a4e 100%
   );
-}
-.title {
-  font-size: 40px;
-  font-weight: bold;
-  color: #ffffff;
-  text-align: center;
-  margin-bottom: 20px;
+  font-size: 16px;
+  color: #353030;
 }
 
-.Left {
-  grid-row: 1;
+.container {
+  display: flex;
+  height: 100vh;
+}
+
+.login-container {
+  flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #484a4e;
-  height: auto;
+  padding-bottom: 50px;
+  background-color: #ffce00;
+  gap: 20px;
 }
 
-form {
-  grid-row: 1;
+.login-container img {
+  margin: 0 auto;
+  padding-right: 20px;
+  width: 280px;
+  height: 70px;
 }
-.input-wrapper {
+
+.login-container form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
 }
 
-.input-wrapper label {
-  text-align: center;
-}
-
-
-.Left img {
-  width: 80%;
-  margin: auto 0;
-}
-
-/* Right Part */
-
-form img {
-  width: 400px;
-  height: 100px;
-}
-
-.sign-in-form {
-  width: 70%;
-  margin: 0 auto;
-
+.need-fix {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  align-items: center;
-  column-gap: 20px;
-  row-gap: 15px;
+  grid-template-columns: 82fr 40fr;
+  width: 400px;
+  row-gap: 7px;
 }
 
-.sign-in-form input {
-  height: 20px;
-  margin-left: -2px;
-  margin-top: -12px;
-  padding: 7px;
-  border: 1px solid #ccc;
+.need-fix p {
+  margin: 7px 0 14px 0;
+}
+
+.need-fix label {
+  grid-column: 1/-1;
+  margin-left: 2px;
+  margin-bottom: -4px;
+}
+
+.login-container input {
+  padding: 12px;
   border-radius: 10px;
-  width: 50%; /* Change the width value to match the sign-up page input field width */
+  border: 1px solid #ccc;
+  grid-column: 1/-1;
 }
 
+button {
+  padding: 10px 20px;
+  border-radius: 10px;
+  border: none;
+  color: white;
+  width: 200px;
+  font-weight: 500;
+  font-size: 20px;
+  background-color: #3a57e8;
+  cursor: pointer;
+}
 
-form div,
-form img,
-form h1,
-form p,
-#btn {
+button:hover {
+  background-color: #353030;
+}
+
+.submitBtnSignIn {
   grid-column: 1/-1;
   margin: 0 auto;
 }
 
-#btn {
-  background-color: #3a57e8;
-  color: white;
-  font-weight: bold;
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  width: 250px;
-  height: 40px;
-  font-size: 20px;
+ion-icon:hover {
+  color: #353030;
 }
 
-input {
-  height: 20px;
-  margin-left: -2px;
-  margin-top: -12px;
-  padding: 7px;
-  border: 1px solid #ccc;
-  border-radius: 10px;
-}
-
-form div {
+.image-container {
+  flex: 1;
   display: flex;
-  width: 250px;
-  justify-content: space-around;
+  justify-content: center;
+  align-items: center;
 }
 
-form div ion-icon {
-  width: 50px;
-  height: 50px;
-}
-
-.password-requirements {
-  list-style-type: none;
-  padding: 0;
-  justify-self: center;
-  margin: 5px 0;
-}
-
-.password-requirements li {
-  font-size: 14px;
-}
-
-.not-matched {
-  color: red;
-}
-
-.matched {
-  color: green;
+.image-container img {
+  max-width: 400px;
+  margin: auto;
 }
 
 a:link,
@@ -145,39 +110,10 @@ a:visited {
 }
 
 a:active,
-a:hover,
-ion-icon:active,
-ion-icon:hover {
+a:hover {
   color: #353030;
   text-decoration: underline;
   text-underline-offset: 2px;
-}
-
-#btn:active,
-#btn:hover {
-  background-color: #353030;
-}
-
-/* CSS for ResetPassword */
-.ResetPasswordPage {
-  height: 100vh;
-}
-
-.ResetPassword {
-  grid-template-columns: 1fr;
-  height: 50%;
-  padding-top: 15%;
-}
-
-.ResetPassword input {
-  height: 30px;
-  width: 50%;
-  margin: 0 auto;
-}
-
-.ResetPassword #btn {
-  width: 53%;
-  height: 50px;
 }
 
 /* Media Queries */
@@ -192,11 +128,7 @@ ion-icon:hover {
   body {
     grid-template-columns: 1fr;
     grid-template-rows: auto 1fr;
-    background-image: linear-gradient(
-      to bottom,
-      #ffce00 0%, 
-      #ffce00 100%
-    );
+    background-image: linear-gradient(to bottom, #ffce00 0%, #ffce00 100%);
   }
 
   .Left {
@@ -266,13 +198,8 @@ ion-icon:hover {
   body {
     grid-template-columns: 1fr;
     grid-template-rows: auto 1fr;
-    background-image: linear-gradient(
-      to bottom,
-      #ffce00 0%, 
-      #ffce00 100%
-    );
+    background-image: linear-gradient(to bottom, #ffce00 0%, #ffce00 100%);
   }
-
 
   .Left {
     grid-column: 1;
