--- a/Home.css
+++ b/Home.css
@@ -92,9 +92,63 @@ main {
 }
 
 #weatherInfo {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 1.8rem;
+  color: #484a4e;
+  padding: 1rem;
+  background-color: #6ab7ff;
+  background-image: linear-gradient(to bottom, #6ab7ff, #ffffff);
+  border-radius: 10px;
+  width: 90%;
+  margin-bottom: 1rem;
+}
+/* #weatherInfo {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
   font-size: 1.5rem;
   color: #484a4e;
+  background-color: #6ab7ff;
+  background-image: linear-gradient(to bottom, #6ab7ff, #ffffff);
+  padding: 1rem;
+  border-radius: 10px;
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+  margin-top: 1rem;
+} */
+
+
+.weather-icon {
+  font-size: 3rem;
 }
+
+.temp-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.temp {
+  font-size: 4rem;
+  font-weight: 500;
+  margin-bottom: 0.5rem;
+}
+
+.weather-description {
+  text-transform: capitalize;
+  font-size: 1.2rem;
+}
+
+
+
+
+/* #weatherInfo {
+  font-size: 1.5rem;
+  color: #484a4e;
+} */
 
 /* style card */
 .card-container {
@@ -211,3 +265,47 @@ main {
   border: none;
   margin: 8px 0;
 }
+
+.forecast-container {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+
+.forecast-column {
+  /* background-color: #484a4e; */
+  background-color: #6ab7ff;
+  background-image: linear-gradient(to bottom, #6ab7ff, #ffffff);
+  color: #484a4e;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  margin-right: 1rem;
+  margin-left: 1rem;
+  height: 250px; /* set the height of each container */
+  overflow-y: scroll; /* add vertical scroll */
+}
+
+
+.date-header {
+  margin-bottom: 1rem;
+  text-align: center;
+  font-size: 1.2rem;
+}
+
+.forecast-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.forecast-item {
+  margin-bottom: 0.5rem;
+  font-size: 0.9rem;
+  width: 100%; /* make each item take up full width */
+}
+
+
+
+
+
