--- a/Home.css
+++ b/Home.css
@@ -104,22 +104,8 @@ main {
   border-radius: 10px;
   width: 90%;
   margin-bottom: 1rem;
+  text-align: center;
 }
-/* #weatherInfo {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  font-size: 1.5rem;
-  color: #484a4e;
-  background-color: #6ab7ff;
-  background-image: linear-gradient(to bottom, #6ab7ff, #ffffff);
-  padding: 1rem;
-  border-radius: 10px;
-  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
-  margin-top: 1rem;
-} */
-
 
 .weather-icon {
   font-size: 3rem;
@@ -141,14 +127,6 @@ main {
   text-transform: capitalize;
   font-size: 1.2rem;
 }
-
-
-
-
-/* #weatherInfo {
-  font-size: 1.5rem;
-  color: #484a4e;
-} */
 
 /* style card */
 .card-container {
@@ -272,7 +250,6 @@ main {
   gap: 1rem;
 }
 
-
 .forecast-column {
   /* background-color: #484a4e; */
   background-color: #6ab7ff;
@@ -285,7 +262,6 @@ main {
   height: 250px; /* set the height of each container */
   overflow-y: scroll; /* add vertical scroll */
 }
-
 
 .date-header {
   margin-bottom: 1rem;
@@ -304,8 +280,3 @@ main {
   font-size: 0.9rem;
   width: 100%; /* make each item take up full width */
 }
-
-
-
-
-
