--- a/Home.css
+++ b/Home.css
@@ -21,6 +21,10 @@ header {
   background-color: #484a4e;
 }
 
+.logo {
+  width: 15%;
+}
+
 #photo-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -30,6 +34,8 @@ header {
 }
 
 .title {
+  display: flex;
+  align-items: center;
   font-size: 2rem;
   font-weight: 500;
   color: #ffffff;
@@ -345,4 +351,108 @@ main {
   background-color: #4caf50;
 }
 
+.business-img {
+  width: 100%;
+  height: 225px;
+}
+
 /* Media Query */
+@media screen and (max-width: 1200px) {
+  #weatherInfo {
+    font-size: 1.5rem;
+  }
+
+  .place-card img {
+    height: 150px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  #weatherInfo {
+    display: initial;
+    font-size: 1.8rem;
+  }
+
+  #photo-container {
+    grid-template-columns: 1fr;
+    column-gap: 20px;
+  }
+
+  .forecast-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 0;
+  }
+
+  .card-container {
+    width: 85%;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .search {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 10px;
+  }
+  .logo {
+    width: 25%;
+  }
+
+  .card-container {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  #weatherInfo {
+    display: initial;
+    font-size: 1.5rem;
+  }
+
+  .forecast-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 0;
+  }
+
+  #locationSearch {
+    margin-bottom: 0;
+    width: 350px;
+  }
+
+  #photo-container {
+    grid-template-columns: 1fr;
+  }
+
+  header {
+    display: block;
+  }
+
+  header nav {
+    align-items: center;
+    justify-content: center;
+  }
+
+  .title {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .logo {
+    width: 50%;
+    margin: 0 auto;
+  }
+
+  .card-container {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  #locationSearch {
+    width: 250px;
+  }
+}
